// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SrpInputGrid renders with custom uniqueId 1`] = `
<View
  style={
    [
      {
        "display": "flex",
        "flexDirection": "column",
        "gap": 4,
        "marginBottom": 24,
        "marginTop": 8,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#f3f3f4",
          "borderRadius": 10,
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "minHeight": 210,
          "paddingLeft": 16,
          "paddingRight": 16,
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessible={true}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "display": "flex",
          },
          {
            "alignItems": "center",
            "backgroundColor": "#b4b4b528",
            "borderColor": "#b4b4b566",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 0,
            "left": 0,
            "opacity": 0,
            "paddingLeft": 16,
            "paddingRight": 16,
            "position": "absolute",
            "top": 0,
          },
        ]
      }
      testID="textfield"
    >
      <View
        style={
          [
            {
              "display": "flex",
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "height": 46,
            },
            undefined,
          ]
        }
      >
        <TextInput
          autoCapitalize="none"
          autoComplete="off"
          autoCorrect={false}
          autoFocus={false}
          editable={true}
          enablesReturnKeyAutomatically={false}
          importantForAutofill="no"
          keyboardType="visible-password"
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          onSelectionChange={[Function]}
          onSubmitEditing={[Function]}
          placeholder=""
          placeholderTextColor="#babbbe"
          returnKeyType="done"
          showSoftInputOnFocus={true}
          spellCheck={false}
          style={
            {
              "backgroundColor": "transparent",
              "borderColor": "transparent",
              "borderWidth": 1,
              "color": "#66676a",
              "fontFamily": "Geist-Regular",
              "fontSize": 16,
              "fontWeight": "400",
              "height": 66,
              "letterSpacing": 0,
              "lineHeight": 20,
              "marginBottom": 16,
              "marginTop": 16,
              "opacity": 1,
              "paddingVertical": 0,
            }
          }
          submitBehavior="submit"
          testID="seed-phrase-input_0"
          textAlignVertical="top"
          textContentType="none"
          value=""
        />
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessible={true}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "display": "flex",
          },
          {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderColor": "#b4b4b566",
            "borderRadius": 12,
            "borderWidth": 0,
            "flexBasis": "0%",
            "flexDirection": "row",
            "flexGrow": 1,
            "flexShrink": 1,
            "height": 48,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
          },
        ]
      }
      testID="textfield"
    >
      <View
        style={
          [
            {
              "display": "flex",
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "height": 46,
            },
            undefined,
          ]
        }
      >
        <TextInput
          autoCapitalize="none"
          autoComplete="off"
          autoCorrect={false}
          autoFocus={true}
          editable={true}
          enablesReturnKeyAutomatically={false}
          importantForAutofill="no"
          keyboardType="visible-password"
          multiline={true}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          onSelectionChange={[Function]}
          onSubmitEditing={[Function]}
          placeholder="Enter your Secret Recovery Phrase"
          placeholderTextColor="#66676a"
          returnKeyType="done"
          showSoftInputOnFocus={true}
          spellCheck={false}
          style={
            {
              "backgroundColor": "transparent",
              "borderColor": "transparent",
              "borderWidth": 1,
              "color": "#66676a",
              "fontFamily": "Geist-Regular",
              "fontSize": 16,
              "fontWeight": "400",
              "height": 66,
              "letterSpacing": 0,
              "lineHeight": 20,
              "marginBottom": 16,
              "marginTop": 16,
              "opacity": 1,
              "paddingVertical": 0,
            }
          }
          submitBehavior="submit"
          testID="seed-phrase-input"
          textAlignVertical="top"
          textContentType="none"
          value=""
        />
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "alignItems": "flex-end",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "paddingBottom": 1,
          "paddingTop": 4,
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityLabel="Paste"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "transparent",
            "borderColor": "transparent",
            "borderRadius": 12,
            "borderWidth": 0,
            "columnGap": 8,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "minWidth": 80,
            "opacity": 1,
            "overflow": "hidden",
            "paddingLeft": 16,
            "paddingRight": 16,
          },
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <Text
        accessibilityRole="text"
        ellipsizeMode="clip"
        numberOfLines={1}
        style={
          [
            {
              "color": "#4459ff",
              "flexGrow": 0,
              "flexShrink": 1,
              "flexWrap": "wrap",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Paste
      </Text>
    </View>
  </View>
</View>
`;

exports[`SrpInputGrid renders with disabled state 1`] = `
<View
  style={
    [
      {
        "display": "flex",
        "flexDirection": "column",
        "gap": 4,
        "marginBottom": 24,
        "marginTop": 8,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#f3f3f4",
          "borderRadius": 10,
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "minHeight": 210,
          "paddingLeft": 16,
          "paddingRight": 16,
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessible={true}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "display": "flex",
          },
          {
            "alignItems": "center",
            "backgroundColor": "#b4b4b528",
            "borderColor": "#b4b4b566",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 0,
            "left": 0,
            "opacity": 0,
            "paddingLeft": 16,
            "paddingRight": 16,
            "position": "absolute",
            "top": 0,
          },
        ]
      }
      testID="textfield"
    >
      <View
        style={
          [
            {
              "display": "flex",
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "height": 46,
            },
            undefined,
          ]
        }
      >
        <TextInput
          autoCapitalize="none"
          autoComplete="off"
          autoCorrect={false}
          autoFocus={false}
          editable={false}
          enablesReturnKeyAutomatically={false}
          importantForAutofill="no"
          keyboardType="visible-password"
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          onSelectionChange={[Function]}
          onSubmitEditing={[Function]}
          placeholder=""
          placeholderTextColor="#babbbe"
          returnKeyType="done"
          showSoftInputOnFocus={true}
          spellCheck={false}
          style={
            {
              "backgroundColor": "transparent",
              "borderColor": "transparent",
              "borderWidth": 1,
              "color": "#66676a",
              "fontFamily": "Geist-Regular",
              "fontSize": 16,
              "fontWeight": "400",
              "height": 66,
              "letterSpacing": 0,
              "lineHeight": 20,
              "marginBottom": 16,
              "marginTop": 16,
              "opacity": 1,
              "paddingVertical": 0,
            }
          }
          submitBehavior="submit"
          testID="seed-phrase-input_0"
          textAlignVertical="top"
          textContentType="none"
          value=""
        />
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessible={true}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "display": "flex",
          },
          {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderColor": "#b4b4b566",
            "borderRadius": 12,
            "borderWidth": 0,
            "flexBasis": "0%",
            "flexDirection": "row",
            "flexGrow": 1,
            "flexShrink": 1,
            "height": 48,
            "opacity": 0.5,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
          },
        ]
      }
      testID="textfield"
    >
      <View
        style={
          [
            {
              "display": "flex",
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "height": 46,
            },
            undefined,
          ]
        }
      >
        <TextInput
          autoCapitalize="none"
          autoComplete="off"
          autoCorrect={false}
          autoFocus={true}
          editable={false}
          enablesReturnKeyAutomatically={false}
          importantForAutofill="no"
          keyboardType="visible-password"
          multiline={true}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          onSelectionChange={[Function]}
          onSubmitEditing={[Function]}
          placeholder="Enter your Secret Recovery Phrase"
          placeholderTextColor="#66676a"
          returnKeyType="done"
          showSoftInputOnFocus={true}
          spellCheck={false}
          style={
            {
              "backgroundColor": "transparent",
              "borderColor": "transparent",
              "borderWidth": 1,
              "color": "#66676a",
              "fontFamily": "Geist-Regular",
              "fontSize": 16,
              "fontWeight": "400",
              "height": 66,
              "letterSpacing": 0,
              "lineHeight": 20,
              "marginBottom": 16,
              "marginTop": 16,
              "opacity": 1,
              "paddingVertical": 0,
            }
          }
          submitBehavior="submit"
          testID="seed-phrase-input"
          textAlignVertical="top"
          textContentType="none"
          value=""
        />
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "alignItems": "flex-end",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "paddingBottom": 1,
          "paddingTop": 4,
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityLabel="Paste"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "transparent",
            "borderColor": "transparent",
            "borderRadius": 12,
            "borderWidth": 0,
            "columnGap": 8,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "minWidth": 80,
            "opacity": 1,
            "overflow": "hidden",
            "paddingLeft": 16,
            "paddingRight": 16,
          },
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <Text
        accessibilityRole="text"
        ellipsizeMode="clip"
        numberOfLines={1}
        style={
          [
            {
              "color": "#4459ff",
              "flexGrow": 0,
              "flexShrink": 1,
              "flexWrap": "wrap",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Paste
      </Text>
    </View>
  </View>
</View>
`;

exports[`SrpInputGrid renders with empty seed phrase 1`] = `
<View
  style={
    [
      {
        "display": "flex",
        "flexDirection": "column",
        "gap": 4,
        "marginBottom": 24,
        "marginTop": 8,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#f3f3f4",
          "borderRadius": 10,
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "minHeight": 210,
          "paddingLeft": 16,
          "paddingRight": 16,
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessible={true}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "display": "flex",
          },
          {
            "alignItems": "center",
            "backgroundColor": "#b4b4b528",
            "borderColor": "#b4b4b566",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 0,
            "left": 0,
            "opacity": 0,
            "paddingLeft": 16,
            "paddingRight": 16,
            "position": "absolute",
            "top": 0,
          },
        ]
      }
      testID="textfield"
    >
      <View
        style={
          [
            {
              "display": "flex",
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "height": 46,
            },
            undefined,
          ]
        }
      >
        <TextInput
          autoCapitalize="none"
          autoComplete="off"
          autoCorrect={false}
          autoFocus={false}
          editable={true}
          enablesReturnKeyAutomatically={false}
          importantForAutofill="no"
          keyboardType="visible-password"
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          onSelectionChange={[Function]}
          onSubmitEditing={[Function]}
          placeholder=""
          placeholderTextColor="#babbbe"
          returnKeyType="done"
          showSoftInputOnFocus={true}
          spellCheck={false}
          style={
            {
              "backgroundColor": "transparent",
              "borderColor": "transparent",
              "borderWidth": 1,
              "color": "#66676a",
              "fontFamily": "Geist-Regular",
              "fontSize": 16,
              "fontWeight": "400",
              "height": 66,
              "letterSpacing": 0,
              "lineHeight": 20,
              "marginBottom": 16,
              "marginTop": 16,
              "opacity": 1,
              "paddingVertical": 0,
            }
          }
          submitBehavior="submit"
          testID="seed-phrase-input_0"
          textAlignVertical="top"
          textContentType="none"
          value=""
        />
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessible={true}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "display": "flex",
          },
          {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderColor": "#b4b4b566",
            "borderRadius": 12,
            "borderWidth": 0,
            "flexBasis": "0%",
            "flexDirection": "row",
            "flexGrow": 1,
            "flexShrink": 1,
            "height": 48,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
          },
        ]
      }
      testID="textfield"
    >
      <View
        style={
          [
            {
              "display": "flex",
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "height": 46,
            },
            undefined,
          ]
        }
      >
        <TextInput
          autoCapitalize="none"
          autoComplete="off"
          autoCorrect={false}
          autoFocus={true}
          editable={true}
          enablesReturnKeyAutomatically={false}
          importantForAutofill="no"
          keyboardType="visible-password"
          multiline={true}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          onSelectionChange={[Function]}
          onSubmitEditing={[Function]}
          placeholder="Enter your Secret Recovery Phrase"
          placeholderTextColor="#66676a"
          returnKeyType="done"
          showSoftInputOnFocus={true}
          spellCheck={false}
          style={
            {
              "backgroundColor": "transparent",
              "borderColor": "transparent",
              "borderWidth": 1,
              "color": "#66676a",
              "fontFamily": "Geist-Regular",
              "fontSize": 16,
              "fontWeight": "400",
              "height": 66,
              "letterSpacing": 0,
              "lineHeight": 20,
              "marginBottom": 16,
              "marginTop": 16,
              "opacity": 1,
              "paddingVertical": 0,
            }
          }
          submitBehavior="submit"
          testID="seed-phrase-input"
          textAlignVertical="top"
          textContentType="none"
          value=""
        />
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "alignItems": "flex-end",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "paddingBottom": 1,
          "paddingTop": 4,
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityLabel="Paste"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "transparent",
            "borderColor": "transparent",
            "borderRadius": 12,
            "borderWidth": 0,
            "columnGap": 8,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "minWidth": 80,
            "opacity": 1,
            "overflow": "hidden",
            "paddingLeft": 16,
            "paddingRight": 16,
          },
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <Text
        accessibilityRole="text"
        ellipsizeMode="clip"
        numberOfLines={1}
        style={
          [
            {
              "color": "#4459ff",
              "flexGrow": 0,
              "flexShrink": 1,
              "flexWrap": "wrap",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Paste
      </Text>
    </View>
  </View>
</View>
`;

exports[`SrpInputGrid renders with multiple words 1`] = `
<View
  style={
    [
      {
        "display": "flex",
        "flexDirection": "column",
        "gap": 4,
        "marginBottom": 24,
        "marginTop": 8,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#f3f3f4",
          "borderRadius": 10,
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "minHeight": 210,
          "paddingBottom": 8,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 16,
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessible={true}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "display": "flex",
          },
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderColor": "#b4b4b566",
            "borderRadius": 8,
            "borderWidth": 1,
            "flex": 0,
            "flexDirection": "row",
            "height": 40,
            "justifyContent": "flex-start",
            "marginBottom": 8,
            "marginRight": "3%",
            "minWidth": 0,
            "overflow": "hidden",
            "paddingBottom": 4,
            "paddingLeft": 8,
            "paddingRight": 16,
            "paddingTop": 4,
            "width": "31.33%",
          },
        ]
      }
      testID="textfield"
    >
      <View
        style={
          [
            {
              "display": "flex",
              "marginRight": 12,
            },
            undefined,
          ]
        }
        testID="textfield-startacccessory"
      >
        <Text
          accessibilityRole="text"
          style={
            [
              {
                "color": "#66676a",
                "fontFamily": "Geist-SemiBold",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
                "marginRight": -4,
              },
              undefined,
            ]
          }
        >
          1
          .
        </Text>
      </View>
      <View
        style={
          [
            {
              "display": "flex",
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "height": 46,
            },
            undefined,
          ]
        }
      >
        <TextInput
          autoCapitalize="none"
          autoComplete="off"
          autoCorrect={false}
          autoFocus={false}
          editable={true}
          enablesReturnKeyAutomatically={false}
          importantForAutofill="no"
          keyboardType="visible-password"
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          onSelectionChange={[Function]}
          onSubmitEditing={[Function]}
          placeholder=""
          placeholderTextColor="#babbbe"
          returnKeyType="done"
          showSoftInputOnFocus={true}
          spellCheck={false}
          style={
            {
              "backgroundColor": "#ffffff",
              "borderColor": "transparent",
              "borderWidth": 1,
              "color": "#141414",
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "fontFamily": "Geist-Regular",
              "fontSize": 16,
              "fontWeight": "400",
              "height": 24,
              "letterSpacing": 0,
              "maxWidth": "100%",
              "minWidth": 0,
              "opacity": 1,
              "paddingRight": 8,
              "paddingVertical": 0,
            }
          }
          submitBehavior="submit"
          testID="seed-phrase-input_0"
          textAlignVertical="center"
          textContentType="none"
          value="word1"
        />
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessible={true}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "display": "flex",
          },
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderColor": "#b4b4b566",
            "borderRadius": 8,
            "borderWidth": 1,
            "flex": 0,
            "flexDirection": "row",
            "height": 40,
            "justifyContent": "flex-start",
            "marginBottom": 8,
            "marginRight": "3%",
            "minWidth": 0,
            "overflow": "hidden",
            "paddingBottom": 4,
            "paddingLeft": 8,
            "paddingRight": 16,
            "paddingTop": 4,
            "width": "31.33%",
          },
        ]
      }
      testID="textfield"
    >
      <View
        style={
          [
            {
              "display": "flex",
              "marginRight": 12,
            },
            undefined,
          ]
        }
        testID="textfield-startacccessory"
      >
        <Text
          accessibilityRole="text"
          style={
            [
              {
                "color": "#66676a",
                "fontFamily": "Geist-SemiBold",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
                "marginRight": -4,
              },
              undefined,
            ]
          }
        >
          2
          .
        </Text>
      </View>
      <View
        style={
          [
            {
              "display": "flex",
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "height": 46,
            },
            undefined,
          ]
        }
      >
        <TextInput
          autoCapitalize="none"
          autoComplete="off"
          autoCorrect={false}
          autoFocus={false}
          editable={true}
          enablesReturnKeyAutomatically={false}
          importantForAutofill="no"
          keyboardType="visible-password"
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          onSelectionChange={[Function]}
          onSubmitEditing={[Function]}
          placeholder=""
          placeholderTextColor="#babbbe"
          returnKeyType="done"
          showSoftInputOnFocus={true}
          spellCheck={false}
          style={
            {
              "backgroundColor": "#ffffff",
              "borderColor": "transparent",
              "borderWidth": 1,
              "color": "#141414",
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "fontFamily": "Geist-Regular",
              "fontSize": 16,
              "fontWeight": "400",
              "height": 24,
              "letterSpacing": 0,
              "maxWidth": "100%",
              "minWidth": 0,
              "opacity": 1,
              "paddingRight": 8,
              "paddingVertical": 0,
            }
          }
          submitBehavior="submit"
          testID="seed-phrase-input_1"
          textAlignVertical="center"
          textContentType="none"
          value="word2"
        />
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessible={true}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "display": "flex",
          },
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderColor": "#b4b4b566",
            "borderRadius": 8,
            "borderWidth": 1,
            "flex": 0,
            "flexDirection": "row",
            "height": 40,
            "justifyContent": "flex-start",
            "marginBottom": 8,
            "marginRight": 0,
            "minWidth": 0,
            "overflow": "hidden",
            "paddingBottom": 4,
            "paddingLeft": 8,
            "paddingRight": 16,
            "paddingTop": 4,
            "width": "31.33%",
          },
        ]
      }
      testID="textfield"
    >
      <View
        style={
          [
            {
              "display": "flex",
              "marginRight": 12,
            },
            undefined,
          ]
        }
        testID="textfield-startacccessory"
      >
        <Text
          accessibilityRole="text"
          style={
            [
              {
                "color": "#66676a",
                "fontFamily": "Geist-SemiBold",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
                "marginRight": -4,
              },
              undefined,
            ]
          }
        >
          3
          .
        </Text>
      </View>
      <View
        style={
          [
            {
              "display": "flex",
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "height": 46,
            },
            undefined,
          ]
        }
      >
        <TextInput
          autoCapitalize="none"
          autoComplete="off"
          autoCorrect={false}
          autoFocus={false}
          editable={true}
          enablesReturnKeyAutomatically={false}
          importantForAutofill="no"
          keyboardType="visible-password"
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          onSelectionChange={[Function]}
          onSubmitEditing={[Function]}
          placeholder=""
          placeholderTextColor="#babbbe"
          returnKeyType="done"
          showSoftInputOnFocus={true}
          spellCheck={false}
          style={
            {
              "backgroundColor": "#ffffff",
              "borderColor": "transparent",
              "borderWidth": 1,
              "color": "#141414",
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "fontFamily": "Geist-Regular",
              "fontSize": 16,
              "fontWeight": "400",
              "height": 24,
              "letterSpacing": 0,
              "maxWidth": "100%",
              "minWidth": 0,
              "opacity": 1,
              "paddingRight": 8,
              "paddingVertical": 0,
            }
          }
          submitBehavior="submit"
          testID="seed-phrase-input_2"
          textAlignVertical="center"
          textContentType="none"
          value="word3"
        />
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessible={true}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "display": "flex",
          },
          {
            "alignItems": "center",
            "backgroundColor": "#b4b4b528",
            "borderColor": "#b4b4b566",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 0,
            "left": 0,
            "opacity": 0,
            "paddingLeft": 16,
            "paddingRight": 16,
            "position": "absolute",
            "top": 0,
          },
        ]
      }
      testID="textfield"
    >
      <View
        style={
          [
            {
              "display": "flex",
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "height": 46,
            },
            undefined,
          ]
        }
      >
        <TextInput
          autoCapitalize="none"
          autoComplete="off"
          autoCorrect={false}
          autoFocus={false}
          editable={true}
          enablesReturnKeyAutomatically={false}
          importantForAutofill="no"
          keyboardType="visible-password"
          multiline={true}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          onSelectionChange={[Function]}
          onSubmitEditing={[Function]}
          placeholder="Enter your Secret Recovery Phrase"
          placeholderTextColor="#66676a"
          returnKeyType="done"
          showSoftInputOnFocus={true}
          spellCheck={false}
          style={
            {
              "backgroundColor": "transparent",
              "borderColor": "transparent",
              "borderWidth": 1,
              "color": "#66676a",
              "fontFamily": "Geist-Regular",
              "fontSize": 16,
              "fontWeight": "400",
              "height": 66,
              "letterSpacing": 0,
              "lineHeight": 20,
              "marginBottom": 16,
              "marginTop": 16,
              "opacity": 1,
              "paddingVertical": 0,
            }
          }
          submitBehavior="submit"
          testID="seed-phrase-input"
          textAlignVertical="top"
          textContentType="none"
          value="word1"
        />
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "alignItems": "flex-end",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "paddingBottom": 1,
          "paddingTop": 4,
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityLabel="Clear all"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "transparent",
            "borderColor": "transparent",
            "borderRadius": 12,
            "borderWidth": 0,
            "columnGap": 8,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "minWidth": 80,
            "opacity": 1,
            "overflow": "hidden",
            "paddingLeft": 16,
            "paddingRight": 16,
          },
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <Text
        accessibilityRole="text"
        ellipsizeMode="clip"
        numberOfLines={1}
        style={
          [
            {
              "color": "#4459ff",
              "flexGrow": 0,
              "flexShrink": 1,
              "flexWrap": "wrap",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Clear all
      </Text>
    </View>
  </View>
</View>
`;
